--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -1,10 +1,19 @@
 ﻿<Window x:Class="PlantManagement.Views.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Login" Height="250" Width="400">
-    <Grid>
-        <TextBox Name="UsernameTextBox" Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0" />
-        <PasswordBox Name="PasswordBox" Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,80,0,0" />
-        <Button Name="LoginButton" Content="Đăng Nhập" Width="200" Height="40" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,130,0,0" Click="LoginButton_Click"/>
+        Title="Đăng Nhập" Height="250" Width="350" WindowStartupLocation="CenterScreen">
+    <Grid Margin="20">
+        <StackPanel>
+            <TextBlock Text="Tên đăng nhập:" Margin="0,0,0,5"/>
+            <TextBox x:Name="UsernameTextBox" Margin="0,0,0,15" Height="30"/>
+
+            <TextBlock Text="Mật khẩu:" Margin="0,0,0,5"/>
+            <PasswordBox x:Name="PasswordBox" Margin="0,0,0,15" Height="30"/>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Content="Đăng Nhập" Width="100" Margin="5" Click="LoginButton_Click"/>
+                <Button Content="Thoát" Width="100" Margin="5" Click="ExitButton_Click"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
