--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,9 +1,20 @@
 ﻿<Window x:Class="PlantManagement.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Main Window" Height="350" Width="525">
+        Title="Plant Management" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button Name="LoginButton" Content="Đăng Nhập" Width="200" Height="40" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,50,0,0" Click="LoginButton_Click"/>
-        <Button Name="RegisterButton" Content="Đăng Ký" Width="200" Height="40" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,150,0,0" Click="RegisterButton_Click"/>
+        <!-- Giao diện ban đầu -->
+        <StackPanel x:Name="InitialPanel" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button x:Name="LoginButton" Content="Đăng Nhập" Width="200" Height="40" Click="LoginButton_Click" Margin="0,10"/>
+            <Button x:Name="RegisterButton" Content="Đăng Ký" Width="200" Height="40" Click="RegisterButton_Click" Margin="0,10"/>
+        </StackPanel>
+
+        <!-- Giao diện sau khi đăng nhập -->
+        <StackPanel x:Name="FeaturePanel" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Collapsed">
+            <TextBlock Text="Chọn Tính Năng" FontSize="20" FontWeight="Bold" Margin="0,0,0,20"/>
+            <Button Content="Quản Lý Vườn Cây" Width="200" Height="40" Margin="0,10"/>
+            <Button Content="Quản Lý Giống Cây" Width="200" Height="40" Margin="0,10"/>
+            <Button Content="Quản Lý Sản Xuất" Width="200" Height="40" Margin="0,10"/>
+        </StackPanel>
     </Grid>
 </Window>
