--- a/Views/RegisterWindow.xaml
+++ b/Views/RegisterWindow.xaml
@@ -1,23 +1,43 @@
 ﻿<Window x:Class="PlantManagement.Views.RegisterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Đăng Ký" Height="350" Width="525">
+        Title="Register" Height="500" Width="525">
     <Grid>
+        <!-- Register Here Text -->
+        <TextBlock Text="Register Here" FontSize="24" FontWeight="Bold" Foreground="#FF160909" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,7,0,0" />
+
         <!-- Username TextBox with placeholder -->
-        <Grid>
-            <TextBox Name="UsernameTextBox" Width="200" Height="30" Margin="0,50,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" 
-                     GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" />
-            <TextBlock Name="UsernamePlaceholder" Text="Tên đăng nhập" Foreground="Gray" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="8,55,0,0"/>
+        <Grid Margin="0,50,0,0">
+            <TextBox Name="UsernameTextBox" Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            <TextBlock Name="UsernamePlaceholder" Text="UserName" Foreground="#FF160909" VerticalAlignment="Top" Margin="96,5,0,0" HorizontalAlignment="Left"/>
+        </Grid>
+
+        <!-- Full Name TextBox with placeholder -->
+        <Grid Margin="-2,100,2,0">
+            <TextBox Name="FullNameTextBox" Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            <TextBlock Name="FullNamePlaceholder" Text="Full Name" Foreground="#FF1C0D0D" VerticalAlignment="Top" Margin="96,5,0,0" HorizontalAlignment="Left"/>
+        </Grid>
+
+        <!-- Email TextBox with placeholder -->
+        <Grid Margin="0,150,0,0">
+            <TextBox Name="EmailTextBox" Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            <TextBlock Name="EmailPlaceholder" Text="Email" Foreground="#FF1A0C0C" VerticalAlignment="Top" Margin="96,5,0,0" HorizontalAlignment="Left"/>
         </Grid>
 
         <!-- PasswordBox with placeholder -->
-        <Grid>
-            <PasswordBox Name="PasswordBox" Width="200" Height="30" Margin="0,100,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" 
-                         GotFocus="PasswordBox_GotFocus" LostFocus="PasswordBox_LostFocus" />
-            <TextBlock Name="PasswordPlaceholder" Text="Mật khẩu" Foreground="Gray" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="8,105,0,0"/>
+        <Grid Margin="0,200,0,0">
+            <PasswordBox Name="PasswordBox" Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            <TextBlock Name="PasswordPlaceholder" Text="Password" Foreground="#FF0B0404" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="96,5,0,0"/>
+        </Grid>
+
+        <!-- Confirm PasswordBox with placeholder -->
+        <Grid Margin="0,250,0,0">
+            <PasswordBox Name="ConfirmPasswordBox" Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            <TextBlock Name="ConfirmPasswordPlaceholder" Text="Confirm
+                       " Foreground="#FF0B0404" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="96,5,0,0"/>
         </Grid>
 
         <!-- Register Button -->
-        <Button Name="RegisterButton" Content="Đăng Ký" Width="200" Height="40" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,150,0,0" Click="RegisterButton_Click"/>
+        <Button Name="RegisterButton" Content="Register" Width="100" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,300,0,0" Click="RegisterButton_Click"/>
     </Grid>
 </Window>
