--- a/Views/QuanLyThongTinTaiKhoanView.xaml
+++ b/Views/QuanLyThongTinTaiKhoanView.xaml
@@ -1,9 +1,34 @@
 ﻿<UserControl x:Class="PlantManagement.Views.QuanLyThongTinTaiKhoanView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="300" Width="300">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d" 
+             HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
     <Grid>
-        <!-- Nội dung hiển thị thông tin tài khoản -->
-        <TextBlock Text="Thông tin tài khoản" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <!-- Header -->
+        <TextBlock Text="Thông tin tài khoản" FontSize="24" FontWeight="Bold" 
+                   HorizontalAlignment="Center" Margin="0,10,0,20" />
+
+        <!-- DataGrid hiển thị thông tin -->
+        <DataGrid ItemsSource="{Binding Accounts}" AutoGenerateColumns="False" 
+                  Margin="10,50,10,10" IsReadOnly="True" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+            <DataGrid.Columns>
+                <!-- ID -->
+                <DataGridTextColumn Header="ID" Binding="{Binding ID}" Width="50"/>
+                <!-- Tên đăng nhập -->
+                <DataGridTextColumn Header="Tên đăng nhập" Binding="{Binding UserName}" Width="*"/>
+                <!-- Họ và tên -->
+                <DataGridTextColumn Header="Họ và tên" Binding="{Binding FullName}" Width="*"/>
+                <!-- Email -->
+                <DataGridTextColumn Header="Email" Binding="{Binding Email}" Width="*"/>
+                <!-- Ngày tạo tài khoản -->
+                <DataGridTextColumn Header="Ngày tạo tài khoản" Binding="{Binding CreatedAt}" Width="150"/>
+                <!-- ID nhóm (ID_Group) -->
+                <DataGridTextColumn Header="ID nhóm" Binding="{Binding GroupName}" Width="100"/>
+                <!-- Trạng thái -->
+                <DataGridTextColumn Header="Trạng thái" Binding="{Binding IsActive}" Width="100"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
