--- a/Views/QuanLyThongTinTaiKhoanView.xaml
+++ b/Views/QuanLyThongTinTaiKhoanView.xaml
@@ -1,12 +1,36 @@
 ﻿<UserControl x:Class="PlantManagement.Views.QuanLyThongTinTaiKhoanView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:PlantManagement.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <!-- Header -->
+        <TextBlock Text="Thông tin tài khoản" FontSize="24" FontWeight="Bold"
+                   HorizontalAlignment="Center" Margin="0,0,0,20" />
+
+        <!-- Thông tin tài khoản -->
+        <StackPanel Grid.Row="1" Margin="20">
+            <TextBlock Text="Tên đăng nhập:" FontWeight="Bold" />
+            <TextBlock Text="{Binding UserName}" Margin="0,0,0,10" />
+
+            <TextBlock Text="Họ và tên:" FontWeight="Bold" />
+            <TextBlock Text="{Binding FullName}" Margin="0,0,0,10" />
+
+            <TextBlock Text="Email:" FontWeight="Bold" />
+            <TextBlock Text="{Binding Email}" Margin="0,0,0,10" />
+
+            <TextBlock Text="Ngày tạo tài khoản:" FontWeight="Bold" />
+            <TextBlock Text="{Binding CreatedAt}" Margin="0,0,0,10" />
+
+            <TextBlock Text="Nhóm người dùng:" FontWeight="Bold" />
+            <TextBlock Text="{Binding GroupName}" Margin="0,0,0,10" />
+
+            <TextBlock Text="Trạng thái:" FontWeight="Bold" />
+            <TextBlock Text="{Binding IsActive, Converter={StaticResource BoolToStatusConverter}}" Margin="0,0,0,10" />
+        </StackPanel>
     </Grid>
 </UserControl>
