--- a/Views/BaoCaoView.xaml
+++ b/Views/BaoCaoView.xaml
@@ -1,19 +1,41 @@
 ﻿<UserControl x:Class="PlantManagement.Views.BaoCaoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="600" Width="1168" Background="LightYellow">
+             Height="600" Width="1168" Background="Pink">
     <Grid>
         <!-- Nút điều hướng -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15,10,10,5">
-            <Button Content="Người Dùng" Background="LightGreen" Click="NguoiDung_Click" Width="100" Height="25" Margin="5"/>
-            <Button Content="Lịch Sử Truy Cập" Background="LightGreen" Click="LichSuTruyCap_Click" Width="120" Height="25" Margin="5"/>
-            <Button Content="Lịch Sử Tác Động" Background="LightGreen" Click="LichSuTacDong_Click" Width="120" Height="25" Margin="5"/>
-            <Button Content="Tổng Hợp" Background="LightGreen" Click="TongHop_Click" Width="100" Height="25" Margin="5"/>
+            <Button x:Name="NguoiDungButton" Content="Người Dùng" Background="LightGreen" Click="NguoiDung_Click" Width="100" Height="25" Margin="5"/>
+            <Button x:Name="LichSuTruyCapButton" Content="Lịch Sử Truy Cập" Background="LightGreen" Click="LichSuTruyCap_Click" Width="120" Height="25" Margin="5"/>
+            <Button x:Name="LichSuTacDongButton" Content="Lịch Sử Tác Động" Background="LightGreen" Click="LichSuTacDong_Click" Width="120" Height="25" Margin="5"/>
+            <Button x:Name="TongHopButton" Content="Tổng Hợp" Background="LightGreen" Click="TongHop_Click" Width="100" Height="25" Margin="5"/>
         </StackPanel>
 
         <!-- DataGrid để hiển thị danh sách người dùng -->
-        <DataGrid Name="UserDataGrid" AutoGenerateColumns="True" Width="1145" Height="515" Margin="0,0,0,-25"
+        <DataGrid x:Name="UserDataGrid" AutoGenerateColumns="True" Width="1145" Height="535" Margin="0,0,0,-30"
                   HorizontalAlignment="Center" VerticalAlignment="Center"
-                  CanUserReorderColumns="False" CanUserResizeColumns="True"  IsReadOnly="True" CanUserSortColumns="False"/>
+                  CanUserReorderColumns="False" CanUserResizeColumns="True" CanUserSortColumns="False" IsReadOnly="True" Visibility="Collapsed"/>
+
+        <!-- DataGrid để hiển thị lịch sử truy cập -->
+        <DataGrid x:Name="LoginHistoryDataGrid" AutoGenerateColumns="True" Width="1145" Height="535" Margin="0,0,0,-30"
+                  HorizontalAlignment="Center" VerticalAlignment="Center"
+                  CanUserReorderColumns="False" CanUserResizeColumns="True" CanUserSortColumns="False" IsReadOnly="True" Visibility="Collapsed"/>
+
+        <!-- DataGrid để hiển thị lịch sử tác động -->
+        <DataGrid x:Name="ImpactHistoryDataGrid" AutoGenerateColumns="True" Width="1145" Height="535" Margin="0,0,0,-30"
+          HorizontalAlignment="Center" VerticalAlignment="Center"
+          CanUserReorderColumns="False" CanUserResizeColumns="True" CanUserSortColumns="False" IsReadOnly="True" Visibility="Collapsed"/>
+        
+        <!-- DataGrid để hiển thị thông tin tổng hợp -->
+        <DataGrid x:Name="TongHopDataGrid" AutoGenerateColumns="True" Width="1145" Height="535" Margin="0,0,0,-30"
+          HorizontalAlignment="Center" VerticalAlignment="Center"
+          CanUserReorderColumns="False" CanUserResizeColumns="True" CanUserSortColumns="False" IsReadOnly="True" Visibility="Collapsed"/>
+
+
+
+        <!-- TextBlock để hiển thị thông báo -->
+        <TextBlock x:Name="MessagePlaceholder" Text="Thông báo sẽ được hiển thị tại đây." 
+                   HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" 
+                   Visibility="Collapsed" Foreground="DarkBlue"/>
     </Grid>
 </UserControl>
