--- a/Views/DonViHanhChinhView.xaml
+++ b/Views/DonViHanhChinhView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="PlantManagement.Views.DonViHanhChinhView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="600" Width="1165" Background="LightYellow">
+             Height="600" Width="1165" Background="Pink">
     <Grid Margin="10">
         <!-- Tiêu đề -->
         <TextBlock Text="Quản Lý Đơn Vị Hành Chính" 
