--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PlantManagement.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Quản lý trồng trọt" Height="600" Width="1168" WindowStartupLocation="CenterScreen">
+        Title="Quản lý trồng trọt" Height="600" Width="1168" WindowStartupLocation="CenterScreen" >
 
     <Grid>
         <!-- Giao diện đăng nhập ban đầu -->
@@ -22,14 +22,14 @@
             </Grid.ColumnDefinitions>
 
             <!-- Header -->
-            <Grid Grid.Row="0" Grid.ColumnSpan="2" Background="#4CAF50" Height="80">
+            <Grid Grid.Row="0" Grid.ColumnSpan="2" Background="#00FA9A" Height="80">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0">
-                    <TextBlock Text="Quản Lý Trồng Trọt" FontSize="24" FontWeight="Bold" Foreground="White" VerticalAlignment="Center" Margin="10,0"/>
+                    <TextBlock Text="Quản Lý Trồng Trọt" FontSize="24" FontWeight="Bold" Foreground="#006400" VerticalAlignment="Center" Margin="10,0"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="20,0" Grid.Column="1">
@@ -43,7 +43,7 @@
             </Grid>
 
             <!-- Sidebar -->
-            <StackPanel Grid.Row="1" Grid.Column="0" Background="#E8F5E9">
+            <StackPanel Grid.Row="1" Grid.Column="0" Background="Pink">
                 <!-- Chèn logo cây xanh -->
                 <Image Source="C:\Users\AD\Desktop\Plant-Management-07a638d8414b7f224d525f816d8a96a3db0a58d0\Plant-Management-07a638d8414b7f224d525f816d8a96a3db0a58d0\Images\cropped-logo-vingarden-removebg-preview.png" Height="200" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,10,0,10"/>
 
