--- a/Views/QuanLyThongTinTaiKhoanView.xaml
+++ b/Views/QuanLyThongTinTaiKhoanView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="PlantManagement.Views.QuanLyThongTinTaiKhoanView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="600" Width="1165" Background="LightYellow" >
+             Height="600" Width="1165" Background="Pink" >
     <Grid>
         <!-- Dòng chữ "Thông Tin Tài Khoản" ở giữa phía trên -->
         <TextBlock FontSize="20" FontWeight="Bold" Text="Thông Tin Tài Khoản" 
